--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "svelte": "^3.55.1",
     "vite": "^4.1.0"
+  },
+  "dependencies": {
+    "pocketbase": "^0.12.1",
+    "qrcode": "^1.5.1"
   }
 }
